k8s/base/09-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: fiap-tc-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: elmarcelfarias/nginx-fiap-tc-1:3f113bb
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-config
              mountPath: /etc/nginx/sites-enabled/laravel.conf
              subPath: laravel.conf
          readinessProbe:
            httpGet:
              path: /nginx_status
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /nginx_status
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
