k8s/base/12-mailpit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: fiap-tc-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit
          ports:
            - containerPort: 1025
              name: smtp
            - containerPort: 8025
              name: http
          readinessProbe:
            tcpSocket:
              port: 8025
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8025
            initialDelaySeconds: 5
            periodSeconds: 20
