k8s/base/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fiap-tc-1
spec:
  selector:
    app: api
  ports:
    - port: 9000
      targetPort: 9000
