k8s/base/10-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: fiap-tc-1
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80

# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx
#   namespace: fiap-tc-1
# spec:
#   type: LoadBalancer
#   selector:
#     app: nginx
#   ports:
#     - port: 8888
#       targetPort: 80

# Alternativa sem custo de load balancer gerenciado pelo provedor de nuvem:
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx
#   namespace: fiap-tc-1
# spec:
#   type: NodePort
#   selector:
#     app: nginx
#   ports:
#     - port: 80
#       targetPort: 80
#       nodePort: 30080
